finally logic is done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="app.js"></script>
 </head>
 <body>
-    
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
 </body>
 </html>
