One thing pending how to stop after game is won

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Rock Paper Scissors</title>
-    <script src="app.js"></script>
+    
 </head>
 <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <h1 class="heading">ROCK PAPER SCISSORS!</h1>
+    <div class="container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    
+    <div class="playerChoice" id="1">You Chose: </div>
+    <div class="computerChoice" id="2">Computer Chose: </div>
+    <div class="computerScore" id="3">Computer Score: </div>
+    <div class="playerScore" id="4">Your Score: </div>
+    <div class="result" id="5"></div>
+    <div class="finalResult" id="6"></div>
+    </div>
+    <div class="reset">
+    <a href="" class="reload">Reset</a>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
